# jekyll-theme-chirpy

./: .browserslistrc  .coderabbit.yaml  .commitlintrc.json  .editorconfig  .env.example  .env.karmolab.common.template  .gitattributes  .gitignore  .gitmessage.txt  .gitmodules  .hintrc  .jekyll-metadata  .karmolab.common.env.template  .markdownlint.json  .pages.yml  .pre-commit-config.yaml  .replit  .stylelintrc.json  .travis.yml  .versionrc.json  2021-11-27-Sleepy-driving-prevention-system.md  2022-01-01-first.md  2024-01-14-biweekly-meeting.html  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  Cookies  Dockerfile  Gemfile  LICENSE  LICENSE.md  Makefile  Network Persistent State  README.ASTRO.md  README.md  README.txt  (+91 more)
.claude/: launch.json
.devcontainer/: devcontainer.json  post-create.sh
.docker/: Dockerfile  entrypoint.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  renovate.json  stale.yml
.husky/: commit-msg  pre-push
.obsidian/: app.json  community-plugins.json  graph.json  hotkeys.json  workspace.json
Backups/: workspaces.json
Cache/: 526a8825caa06dc6_0  c85687354a0e770a_0  cbb7d7a47aa05bad_0  cbc42e4c979f69f0_0
CachedExtensions/: builtin  user
Crash Reports/: client_id
GPUCache/: data_1  index
HaejungHan.github.io/: jekyll-theme-chirpy.gemspec  package.json  rollup.config.js
Templates/: 2024-07-01-intro.md
User/: settings.json
_app/: app.min.js  sw.min.js
_articles/: 2019-08-08-write-a-new-post.md
_assets/: main.css
_data/: authors.yml  certs.yml  contact.yml  credentials.yml  date_format.yml  edit-this-post.yml  experience.yml  external_links.yml  label.yml  license.yml  media.yml  meta.yml  pages.yml  profile.yml  read_time.yml  right.yml  rights.yml  share.yml  tabs.yaml  tabs.yml  tier_list.yml  timeline.yml  updates.yml
_doc/: Manual.md  README.zh.md
_docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  index.html  (+4 more)
apps/chat-overlay/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/chat-overlay/src-tauri/capabilities/: default.json
apps/chat-overlay/src-tauri/icons/: icon.icns
apps/chat-overlay/src-tauri/src/: ingest_server.rs  lib.rs  main.rs
apps/karmolab-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev-dual.conf.json  tauri.dev-jekyll.conf.json  tauri.dev-remote.conf.json  tauri.release.conf.json
apps/karmolab-tauri/src-tauri/.cargo/: config.toml
apps/karmolab-tauri/src-tauri/capabilities/: default.json
apps/karmolab-tauri/src-tauri/icons/: icon.icns
apps/karmolab-tauri/src-tauri/permissions/: activity.toml  flow-doc.toml  karmoddrine-state.toml  karmolab-release.toml  karmolab-update.toml  localdev.toml  quest-index.toml  quest-launcher.toml  repofile.toml  terminal.toml
apps/karmolab-tauri/src-tauri/permissions/autogenerated/: desktop_notify.toml
apps/karmolab-tauri/src-tauri/src/: activity.rs  flow_doc.rs  karmoddrine_state.rs  lib.rs  local_dev.rs  main.rs  origin_pref.rs  quest_index.rs  quest_launcher.rs  quest_watcher.rs  quest_writeback.rs  repo_file.rs  terminal.rs
(+10726 files in other folders)
