[package]
name = "chat_overlay"
version = "0.2.0"
description = "Transparent chat overlay (Tauri)"
authors = ["mascari4615"]
edition = "2021"

[lib]
name = "chat_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
