[package]
name = "karmolab-desktop"
version = "0.1.0"
description = "KarmoLab desktop shell (Tauri WebView)"
authors = ["mascari4615"]
edition = "2021"

[lib]
name = "karmolab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify-rust = "4"
open = "5"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

