[package]
name = "karmolab-desktop"
version = "0.1.7"
description = "KarmoLab desktop shell (Tauri WebView)"
authors = ["mascari4615"]
edition = "2021"

[lib]
name = "karmolab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify-rust = "4"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "handleapi", "minwindef", "sysinfoapi"] }

